Fixed bug #37773 (iconv_substr() gives "Unknown error" when string length = 1").