ext/iconv/iconv.c
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: iconv.c,v 1.124.2.8.2.7 2006/09/12 17:26:34 tony2001 Exp $ */
+/* $Id: iconv.c,v 1.124.2.8.2.8 2006/11/15 18:34:57 iliaa Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -744,7 +744,9 @@ static php_iconv_err_t _php_iconv_substr(smart_str *pretval,
 				}
 			}
 
-			_php_iconv_appendl(pretval, buf, sizeof(buf), cd2);
+			if (_php_iconv_appendl(pretval, buf, sizeof(buf), cd2) != PHP_ICONV_ERR_SUCCESS) {
+				break;
+			}
 			--len;
 		}
 
@@ -761,10 +763,6 @@ static php_iconv_err_t _php_iconv_substr(smart_str *pretval,
 			break;
 
 		case E2BIG:
-			break;
-
-		default:
-			err = PHP_ICONV_ERR_UNKNOWN;
 			break;
 	}
 #endif
